--- a/main-backend/package.json
+++ b/main-backend/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.5",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "mongoose": "^8.11.0",
