--- a/resume-generator/requirements.txt
+++ b/resume-generator/requirements.txt
@@ -9,11 +9,14 @@ dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
+filelock==3.18.0
+fsspec==2025.3.2
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.8
 httptools==0.6.4
 httpx==0.28.1
+huggingface-hub==0.30.2
 idna==3.10
 Jinja2==3.1.6
 jiter==0.9.0
@@ -26,25 +29,39 @@ langsmith==0.3.30
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.4
 openai==1.74.0
 orjson==3.10.16
 packaging==24.2
+pillow==11.2.1
 pydantic==2.11.3
+pydantic-settings==2.8.1
 pydantic_core==2.33.1
 Pygments==2.19.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rich==14.0.0
 rich-toolkit==0.14.1
+safetensors==0.5.3
+setuptools==78.1.0
 shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.40
 starlette==0.46.2
+sympy==1.13.1
 tenacity==9.1.2
+tokenizers==0.21.1
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
 tqdm==4.67.1
+transformers==4.51.3
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
