--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "ioredis": "^5.6.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.2",
     "passport-google-oauth20": "^2.0.0",
