--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.20",
     "@nestjs/swagger": "^11.0.5",
     "@nestjs/websockets": "^11.0.20",
     "axios": "^1.8.4",
