--- a/resume-generator/requirements.txt
+++ b/resume-generator/requirements.txt
@@ -1,5 +1,7 @@
+accelerate==1.6.0
 annotated-types==0.7.0
 anyio==4.9.0
+bitsandbytes==0.45.5
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
@@ -32,10 +34,13 @@ mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.4
+nvidia-cuda-runtime-cu12==12.8.90
+ollama==0.4.8
 openai==1.74.0
 orjson==3.10.16
 packaging==24.2
 pillow==11.2.1
+psutil==7.0.0
 pydantic==2.11.3
 pydantic-settings==2.8.1
 pydantic_core==2.33.1
