--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
@@ -68,6 +69,7 @@
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
