--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -18,9 +18,15 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "src"
-  ]
+  ],
 }
