--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@craftjs/core": "^0.2.12",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.9",
     "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
