--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "ioredis": "^5.6.1",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.2",
