--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@nestjs/platform-socket.io": "^11.0.20",
     "@nestjs/swagger": "^11.0.5",
     "@nestjs/websockets": "^11.0.20",
+    "@radix-ui/react-slot": "^1.2.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "class-variance-authority": "^0.7.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
@@ -52,9 +54,11 @@
     "nodemailer": "^6.10.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "react": "^19.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -74,6 +78,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "@types/react": "^19.1.2",
     "@types/supertest": "^6.0.2",
     "concurrently": "^9.1.2",
     "eslint": "^9.18.0",
