--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
+    "handlebars": "^4.7.8",
     "ioredis": "^5.6.1",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
@@ -54,6 +55,7 @@
     "nodemailer": "^6.10.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "puppeteer": "^24.8.0",
     "react": "^19.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
