--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@craftjs/core": "^0.2.12",
+    "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-aspect-ratio": "^1.1.6",
     "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-dialog": "^1.1.11",
