--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.503.0",
+    "lzutf8": "^0.6.3",
     "nanoid": "^5.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
