--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-grid-system": "^8.2.1",
+    "react-router": "^7.6.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3"
