--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,12 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "lzutf8": "^0.6.3",
     "nanoid": "^5.1.5",
@@ -37,6 +40,7 @@
     "react-dom": "^19.0.0",
     "react-grid-system": "^8.2.1",
     "react-router": "^7.6.1",
+    "react-router-dom": "^7.6.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3"
