--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "lzutf8": "^0.6.3",
     "nanoid": "^5.1.5",
