--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "^12.16.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.503.0",
     "lzutf8": "^0.6.3",
     "nanoid": "^5.1.5",
