--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-grid-system": "^8.2.1",
     "react-hook-form": "^7.57.0",
     "react-router": "^7.6.1",
